doc/*: remove all references to GNU/Linux and just mention `Debian system': we just as well on other operating systems. scripts/dpkg-source.pl: add Format-field to .dsc files debian/changelog: include changes from 1.6.12.99

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Apr 30 14:19:41 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/*: remove all references to GNU/Linux and just mention `Debian
+    system': we just as well on other operating systems.
+  * scripts/dpkg-source.pl: add Format-field to .dsc files
+  * debian/changelog: include changes from 1.6.12.99
+
 Sat Apr 15 14:53:23 EDT 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * TODO: updated
