--- a/doc/deb-control.5
+++ b/doc/deb-control.5
@@ -1,9 +1,9 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Author: Raul Miller
 .\" Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-.TH DEB-CONTROL 5 "January 2000" "Debian Project" "Debian GNU/Linux"
+.TH DEB-CONTROL 5 "January 2000" "Debian Project" "dpkg"
 .SH NAME
-deb\-control \- Debian GNU/Linux packages' master control file format
+deb\-control \- Debian packages' master control file format
 .SH SYNOPSIS
 control
 .SH DESCRIPTION
