--- a/doc/deb.5
+++ b/doc/deb.5
@@ -1,8 +1,8 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Raul Miller, Ian Jackson
-.TH DEB 5 "January 2000" "Debian Project" "Debian GNU/Linux"
+.TH DEB 5 "January 2000" "Debian Project" "dpkg"
 .SH NAME 
-deb \- Debian GNU/Linux binary package format
+deb \- Debian binary package format
 .SH SYNOPSIS
 .IB filename .deb
 .SH DESCRIPTION
