--- a/doc/deb-old.5
+++ b/doc/deb-old.5
@@ -1,8 +1,8 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Author: Raul Miller, Ian Jackson
-.TH DEB-OLD 5 "January 2000" "Debian Project" "Debian GNU/Linux"
+.TH DEB-OLD 5 "January 2000" "Debian Project" "dpkg"
 .SH NAME 
-deb-old \- old style Debian GNU/Linux binary package format
+deb-old \- old style Debian binary package format
 .SH SYNOPSIS
 .IB filename .deb
 .SH DESCRIPTION
