--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sun May 28 17:24:09 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dpkg-deb/build.c: remove extra closing brace
+  * include/dpkg.h.in: add define for statusoveride file
+  * main/filedb.[ch]: add code to manage the statoverride list
+  * main/archives.c: modify tarobject() to check for statoverrides
+  * TODO: remove integrating suidmanager note, it's partially done now
+    
 Sun Apr 30 14:19:41 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/*: remove all references to GNU/Linux and just mention `Debian
