--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.7.0) unstable; urgency=low
 
+  * Allow the administrator to override file mode and ownership
   * Use objdump instead of ldd in dpkg-shlibdeps
   * HURD updates, Closes: Bug#57753,#57754,#57755
   * dpkg-architecture: -q should not imply -f, Closes: Bug#57761
