--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-genchanges: allow a space between # and a to-be-closed bugnumber
   * dpkg-deb: reorder files when building a package
   * dpkg-statoverride: new tool to override ownership and modes for files
+  * Modify dpkg and dselect to allow versioned provides
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
