--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jun 15 10:09:03 EDT 2000 Ben Collins <bcollins@debian.org>
+
+  * main/depcon.c: remove if() that prevented versioned deps from checking
+    provides to satisfy them
+  * dselect/pkgsublist.cc: Same
+
 Tue Jun 13 22:11:22 CEST 2000 peter karlsson <peter@softwolves.pp.se>
 
   * po/sv.po: Updated Swedish translation
