really fix ver provides

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Jun 16 08:59:47 EDT 2000 Ben Collins <bcollins@debian.org>
+
+  * main/depcon.c: really fixup versioned provides this time. basically we
+    ignore the dvr_* of the provide, and use the version to decide if we
+    want to use it to satisfy the dep
+  * main/enquiry.c: ignore dvr_* type when checking for provides
+
 Thu Jun 15 13:41:28 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/parse.c: add Enhances to fieldinfos[]
