Updated my e-mail address

--- a/THANKS
+++ b/THANKS
@@ -39,7 +39,7 @@ Michael Sobolev <mss@transas.com>
 Miquel van Smoorenburg <miquels@cistron.nl>
 Nicolás Lichtmaier <nick@debian.org>
 Nils Rennebarth <nils@debian.org>
-Peter Karlsson <pk@mds.mdh.se>
+Peter Karlsson <peterk@debian.org>
 Petr Cech <cech@atrey.karlin.mff.cuni.cz>
 Piotr Roszatycki <dexter@fnet.pl>
 Raphael Hertzog <rhertzog@hrnet.fr>
