--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun 17 21:57:00 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+  * THANKS: Updated my e-mail address.
+
 Fri Jun 16 08:59:47 EDT 2000 Ben Collins <bcollins@debian.org>
 
   * main/depcon.c: really fixup versioned provides this time. basically we
