--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,11 @@ Tue Jun 13 19:23:37 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
   * scripts/dpkg-statoverride.8: new file
   * debian/dpkg.postinst: create statoverride file if it doesn't exist
 
+Mon Jun 12 19:38:17 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-statoverride.pl: fix two typos in the help message
+  * debian/dpkg.postinst: create statoverride file if it doesn't exist
+
 Mon Jun 12 16:35:26 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: generate doc/sv/Makefile as well
