Updated sv.po from comments received on the sv@li.org mailing list

--- a/po/sv.po
+++ b/po/sv.po
@@ -18,7 +18,7 @@ msgstr "kunde inte skapa temporärfil för vsnprintf"
 
 #: lib/compat.c:48
 msgid "unable to rewind at start of vsnprintf"
-msgstr "kunde inte gå tillbaka till början av vsnprintf"
+msgstr "kunde inte gå tillbaka till början i vsnprintf"
 
 #: lib/compat.c:49
 msgid "unable to truncate in vsnprintf"
@@ -30,11 +30,11 @@ msgstr "skrivfel i vsnprintf"
 
 #: lib/compat.c:52
 msgid "unable to flush in vsnprintf"
-msgstr "kunde inte utföra \"flush\" i vsnprintf"
+msgstr "kunde inte tömma i vsnprintf"
 
 #: lib/compat.c:53
 msgid "unable to stat in vsnprintf"
-msgstr "kunde inte utföra \"stat\" i vsnprintf"
+msgstr "kunde inte ta status i vsnprintf"
 
 #: lib/compat.c:54
 msgid "unable to rewind in vsnprintf"
@@ -52,7 +52,7 @@ msgstr "Systemfel nr %d"
 #: lib/compat.c:99
 #, c-format
 msgid "Signal no.%d"
-msgstr "Signal nr. %d"
+msgstr "Signal nr %d"
 
 #: lib/database.c:235
 #, c-format
@@ -102,7 +102,7 @@ msgstr "kunde inte fylla ut %.250s"
 #: lib/dbmodify.c:113
 #, c-format
 msgid "unable flush %.250s after padding"
-msgstr "kunde inte utföra \"flush\" på %.250s efter utfyllnad"
+msgstr "kunde inte tömma %.250s efter utfyllnad"
 
 #: lib/dbmodify.c:115
 #, c-format
@@ -134,7 +134,7 @@ msgstr "kunde inte skriva uppdaterad status för \"%.250s\""
 #: lib/dbmodify.c:232
 #, c-format
 msgid "unable to flush updated status of `%.250s'"
-msgstr "kunde inte utföra \"flush\" på uppdaterad status för \"%.250s\""
+msgstr "kunde inte tömma uppdaterad status för \"%.250s\""
 
 #: lib/dbmodify.c:234
 #, c-format
@@ -144,7 +144,7 @@ msgstr "kunde inte klippa för uppdaterad status för \"%.250s\""
 #: lib/dbmodify.c:236
 #, c-format
 msgid "unable to fsync updated status of `%.250s'"
-msgstr "kunde inte utföra \"fsync\" på uppdaterad status för \"%.250s\""
+msgstr "kunde inte synkronisera uppdaterad status för \"%.250s\""
 
 #: lib/dbmodify.c:238
 #, c-format
@@ -173,12 +173,12 @@ msgstr "kunde inte skriva %s-post om \"%.50s\" till \"%.250s\""
 #: lib/dump.c:270
 #, c-format
 msgid "failed to flush %s information to `%.250s'"
-msgstr "kunde inte utföra \"flush\" på %s-information till \"%.250s\""
+msgstr "kunde inte tömma %s-information till \"%.250s\""
 
 #: lib/dump.c:272
 #, c-format
 msgid "failed to fsync %s information to `%.250s'"
-msgstr "kunde inte utföra \"fsync\" på %s-information till \"%.250s\""
+msgstr "kunde inte synkronisera %s-information till \"%.250s\""
 
 #: lib/dump.c:274
 #, c-format
@@ -212,7 +212,7 @@ msgstr ""
 
 #: lib/ehandle.c:110
 msgid "dpkg: too many nested errors during error recovery !!\n"
-msgstr "dpkg: för många nästlade fel vid feluppstädning !!\n"
+msgstr "dpkg: för många nästlade fel vid feluppstädning!!\n"
 
 #: lib/ehandle.c:183
 msgid "out of memory for new cleanup entry with many arguments"
@@ -291,7 +291,7 @@ msgstr "fel i Version-strängen \"%.250s\": %.250s"
 
 #: lib/fields.c:189
 msgid "obsolete `Revision' or `Package-Revision' field used"
-msgstr "gammalmodigt \"Revision\"- eller \"Package-Revision\"-fält använt"
+msgstr "föråldrat \"Revision\"- eller \"Package-Revision\"-fält använt"
 
 #: lib/fields.c:207
 msgid "value for `config-version' field not allowed in this context"
@@ -346,7 +346,7 @@ msgid ""
 " `%c' is obsolete, use `%c=' or `%c%c' instead"
 msgstr ""
 "\"%s\"-fältet: referens till \"%.255s\":\n"
-" \"%c\" är gammalmodigt, använd \"%c=\" eller \"%c%c\" istället"
+" \"%c\" är föråldrat, använd \"%c=\" eller \"%c%c\" istället"
 
 #: lib/fields.c:332
 #, c-format
@@ -379,7 +379,7 @@ msgstr "\"%s\"-fältet: referens till \"%.255s\": versionen innehåller \"(\""
 #: lib/fields.c:356
 #, c-format
 msgid "`%s' field, reference to `%.255s': version unterminated"
-msgstr "\"%s\"-fältet: referens till \"%.255s\": versionen ej terminerad"
+msgstr "\"%s\"-fältet: referens till \"%.255s\": versionsnumret ej avslutat"
 
 #: lib/fields.c:361
 #, c-format
@@ -433,7 +433,7 @@ msgstr "%s (underprocess): %s\n"
 
 #: lib/mlib.c:80
 msgid "fork failed"
-msgstr "förgrening misslyckades"
+msgstr "förgrening (fork) misslyckades"
 
 #: lib/mlib.c:93
 #, c-format
@@ -482,7 +482,7 @@ msgstr "kunde inte skriva vid kopiering (%s)"
 #: lib/mlib.c:131
 #, c-format
 msgid "failed in copy on read (%s)"
-msgstr "kunde inte läsa vid kopiering (%.250s)"
+msgstr "kunde inte läsa vid kopiering (%s)"
 
 #: lib/mlib.c:136
 msgid "failed to allocate buffer for snprintf 1"
@@ -509,7 +509,7 @@ msgstr "flaggan --%s tar ett värde"
 #: lib/myopt.c:57
 #, c-format
 msgid "--%s option does not take a value"
-msgstr "flaggan --%s tar inte ett värde"
+msgstr "flaggan --%s tar inget värde"
 
 #: lib/myopt.c:64
 #, c-format
@@ -524,7 +524,7 @@ msgstr "flaggan -%c tar ett värde"
 #: lib/myopt.c:77
 #, c-format
 msgid "-%c option does not take a value"
-msgstr "flaggan -%c tar inte ett värde"
+msgstr "flaggan -%c tar inget värde"
 
 #: lib/parse.c:91
 #, c-format
@@ -692,7 +692,7 @@ msgstr "misslyckades med att utföra \"realloc\" för variabelbuffert"
 
 #: main/archives.c:102
 msgid "process_archive ...  already disappeared !"
-msgstr "process_archive ...  har redan försvunnit !"
+msgstr "process_archive ...  har redan försvunnit!"
 
 #: main/archives.c:128
 msgid "error reading from dpkg-deb pipe"
@@ -802,7 +802,7 @@ msgstr "tarobjekt ... statoverride, uid=%d, gid=%d, behörighet=%04o"
 #: main/archives.c:431
 #, c-format
 msgid "error flushing `%.255s'"
-msgstr "fel vid \"flush\" av \"%.255s\""
+msgstr "fel vid tömning av \"%.255s\""
 
 #: main/archives.c:437
 #, c-format
@@ -853,7 +853,7 @@ msgstr "kunde inte säkerhetskopiera symbolisk länk för \"%.255s\""
 #, c-format
 msgid "unable to chown backup symlink for `%.255s'"
 msgstr ""
-"kunde inte utföra \"chown\" på säkerhetskopierad symbolisk länk för "
+"kunde inte byta ägare på säkerhetskopierad symbolisk länk för "
 "\"%.255s\""
 
 #: main/archives.c:537
@@ -932,7 +932,7 @@ msgstr ""
 #: main/archives.c:664
 #, c-format
 msgid "dpkg: package %s requires reinstallation, will not remove.\n"
-msgstr "dpkg: paketet %s kräver ominstallation, tar inte bort.\n"
+msgstr "dpkg: paketet %s kräver återinstallation, tar inte bort.\n"
 
 #: main/archives.c:677
 #, c-format
@@ -955,7 +955,7 @@ msgstr "paketkonflikt - installerar inte %.250s"
 
 #: main/archives.c:689
 msgid "dpkg: warning - ignoring conflict, may proceed anyway !\n"
-msgstr "dpkg: varning - ignorerar konflikt, kan ändå fortsätta !\n"
+msgstr "dpkg: varning - ignorerar konflikt, kan ändå fortsätta!\n"
 
 #: main/archives.c:732
 #, c-format
@@ -1010,9 +1010,7 @@ msgstr "%s - varning: nedgraderar %.250s från %.250s till %.250s.\n"
 #: main/archives.c:896
 #, c-format
 msgid "Will not downgrade %.250s from version %.250s to %.250s, skipping.\n"
-msgstr ""
-"Kommer inte att nedgradera %.250s från version %.250s till %.250s, hoppar "
-"över.\n"
+msgstr "Nedgraderar inte %.250s från version %.250s till %.250s, hoppar över.\n"
 
 #: main/cleanup.c:84
 #, c-format
@@ -1021,7 +1019,7 @@ msgid ""
 "of backup copy"
 msgstr ""
 "kunde inte ta bort nyss installerad version av \"%.250s\" för att möjliggöra "
-"ominstallation av säkerhetskopia"
+"återinstallation av säkerhetskopia"
 
 #: main/cleanup.c:91
 #, c-format
@@ -1190,7 +1188,7 @@ msgid ""
 "      D     : show the differences between the versions\n"
 "      Z     : background this process to examine the situation\n"
 msgstr ""
-"   Vad vill du göra åt det ?  Dina möjligheter är:\n"
+"   Vad vill du göra åt det?  Dina möjligheter är:\n"
 "   Y eller I: installera paketansvariges version\n"
 "   N eller O: behåll din nu installerade version\n"
 "      D     : visa skillnaderna mellan versionerna\n"
@@ -1269,8 +1267,7 @@ msgstr "kunde inte starta skalet (%.250s)"
 #: main/configure.c:355
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
 msgstr ""
-"Glöm inte att flytta denna process till förgrunden (\"fg\") när du är klar "
-"!\n"
+"Glöm inte att flytta denna process till förgrunden (\"fg\") när du är klar!\n"
 
 #: main/configure.c:376
 #, c-format
@@ -1883,7 +1880,7 @@ msgstr "kunde inte skriva till uppdaterad fillistfil för paketet %s"
 #: main/filesdb.c:268
 #, c-format
 msgid "failed to flush updated files list file for package %s"
-msgstr "kunde inte utföra \"flush\" på uppdaterad fillistfil för paketet %s"
+msgstr "kunde inte tömma uppdaterad fillistfil för paketet %s"
 
 #: main/filesdb.c:270
 #, c-format
@@ -2278,7 +2275,7 @@ msgid ""
 "[*].\n"
 "\n"
 "Options marked [*] produce a lot of output - pipe it through `less' or "
-"`more' !"
+"`more'!"
 msgstr ""
 "Skriv dpkg --help för hjälp om att (av)installera paket [*]\n"
 "Använd dselect för användarvänlig pakethantering.\n"
@@ -3317,7 +3314,7 @@ msgid ""
 "Perhaps you should be using dpkg --install ?"
 msgstr ""
 "--%s behöver en målkatalog.\n"
-"Kanske är det dpkg --install du vill använda ?"
+"Kanske är det dpkg --install du vill använda?"
 
 #: dpkg-deb/extract.c:320
 #, c-format
@@ -3484,7 +3481,7 @@ msgstr ""
 "Använd \"dpkg\" för att installera och ta bort paket från ditt system, "
 "eller\n"
 "\"dselect\" för användarvänlig pakethantering. Paket som packats upp med\n"
-"\"dpkg-deb --extract\" kommer inte att installeras korrekt !\n"
+"\"dpkg-deb --extract\" kommer inte att installeras korrekt!\n"
 
 #: dpkg-deb/main.c:81
 msgid ""
@@ -3932,7 +3929,7 @@ msgstr "%s: inga filer kontrollerade\n"
 
 #: dselect/basecmds.cc:99
 msgid "Search for ? "
-msgstr "Sök efter ? "
+msgstr "Sök efter? "
 
 #: dselect/basecmds.cc:130
 msgid "Help: "
