Updated ChangeLog from comments received on the sv@li.org mailing list

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun 27 19:19:00 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation from comments received.
+
 Sat Jun 17 21:57:00 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
