Added more of the changes suggested from the sv@li.org list.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
+Wed Jun 28 19:50:00 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation from comments received.
+
 Wed Jun 28 00:04:40 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
  * lib/showcright.c: don't translate function-name in do_fd_copy call
 
-Sat Jun 27 19:19:00 CEST 2000 peter karlsson <peterk@debian.org>
+Tue Jun 27 19:19:00 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation from comments received.
 
