--- a/po/sv.po
+++ b/po/sv.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.6.12\n"
-"POT-Creation-Date: 2000-06-17 21:52+0200\n"
-"PO-Revision-Date: 2000-06-17 21:55+0200\n"
+"Project-Id-Version: dpkg 1.7.0\n"
+"POT-Creation-Date: 2000-06-28 19:17+0200\n"
+"PO-Revision-Date: 2000-06-28 19:50+0200\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -682,13 +682,9 @@ msgstr "tomt värde för %s"
 msgid "cannot open GPL file "
 msgstr "kunde inte öppna GPL-fil "
 
-#: lib/showcright.c:32
-msgid "showcopyright"
-msgstr "showcopyright"
-
 #: lib/varbuf.c:77
 msgid "failed to realloc for variable buffer"
-msgstr "misslyckades med att utföra \"realloc\" för variabelbuffert"
+msgstr "misslyckades att återallokera variabelbuffert"
 
 #: main/archives.c:102
 msgid "process_archive ...  already disappeared !"
@@ -782,7 +778,7 @@ msgstr "försöker skriva över \"%.250s\" som också finns i paketet %.250s"
 #: main/archives.c:399
 #, c-format
 msgid "unable to fdopen for `%.255s'"
-msgstr "kunde inte utföra \"fdopen\" för \"%.255s\""
+msgstr "kunde inte öppna filen \"%.255s\""
 
 #: main/archives.c:408
 #, c-format
@@ -853,8 +849,7 @@ msgstr "kunde inte säkerhetskopiera symbolisk länk för \"%.255s\""
 #, c-format
 msgid "unable to chown backup symlink for `%.255s'"
 msgstr ""
-"kunde inte byta ägare på säkerhetskopierad symbolisk länk för "
-"\"%.255s\""
+"kunde inte byta ägare på säkerhetskopierad symbolisk länk för \"%.255s\""
 
 #: main/archives.c:537
 #, c-format
@@ -968,7 +963,7 @@ msgstr "kunde inte köra \"find\" för --recursive"
 
 #: main/archives.c:765
 msgid "failed to fdopen find's pipe"
-msgstr "kunde inte utföra \"fdopen\" på finds rör"
+msgstr "kunde inte ansluta fil till finds rör"
 
 #: main/archives.c:772
 msgid "error reading find's pipe"
@@ -1010,7 +1005,8 @@ msgstr "%s - varning: nedgraderar %.250s från %.250s till %.250s.\n"
 #: main/archives.c:896
 #, c-format
 msgid "Will not downgrade %.250s from version %.250s to %.250s, skipping.\n"
-msgstr "Nedgraderar inte %.250s från version %.250s till %.250s, hoppar över.\n"
+msgstr ""
+"Nedgraderar inte %.250s från version %.250s till %.250s, hoppar över.\n"
 
 #: main/cleanup.c:84
 #, c-format
@@ -1342,7 +1338,7 @@ msgid ""
 "dpkg: %s: warning - unable to readlink conffile `%s'\n"
 " (= `%s'): %s\n"
 msgstr ""
-"dpkg: %s: varning - kunde inte utföra \"readlink\" på konfigurationsfilen "
+"dpkg: %s: varning - kunde inte läsa länken till konfigurationsfilen "
 "\"%s\"\n"
 " (= \"%s\"): %s\n"
 
@@ -1372,15 +1368,15 @@ msgstr "kunde inte starta md5sum"
 #: main/configure.c:556
 #, c-format
 msgid "unable to fdopen for md5sum of `%.250s'"
-msgstr "kunde inte utföra \"fdopen\" för md5sum på \"%.250s\""
+msgstr "kunde inte ansluta fil till md5sum på \"%.250s\""
 
 #: main/configure.c:564
 msgid "error reading pipe from md5sum"
-msgstr "fel vid läsning av rör för md5sum"
+msgstr "fel vid läsning av rör från md5sum"
 
 #: main/configure.c:565
 msgid "error closing pipe from md5sum"
-msgstr "fel vid stängning av rör för md5sum"
+msgstr "fel vid stängning av rör från md5sum"
 
 #. file= fdopen(p1[0])
 #. m_pipe()
@@ -1544,7 +1540,7 @@ msgid ""
 "installation.  They must be reinstalled for them (and any packages\n"
 "that depend on them) to function properly:\n"
 msgstr ""
-"Följande paket har stora problem på grund av grava problem när de\n"
+"Följande paket är i oordning på grund av grava problem när de\n"
 "installerades. De måste ominstalleras om de (och paket som beror på\n"
 "dem) ska fungera korrekt:\n"
 
@@ -1733,7 +1729,7 @@ msgstr "--print-architecture tar inget argument"
 
 #: main/enquiry.c:673
 msgid "failed to fdopen CC pipe"
-msgstr "kunde inte utföra \"fdopen\" på CC-rör"
+msgstr "kunde inte anluta fill till CC-rör"
 
 #: main/enquiry.c:692
 msgid "error reading from CC pipe"
@@ -1885,7 +1881,7 @@ msgstr "kunde inte tömma uppdaterad fillistfil för paketet %s"
 #: main/filesdb.c:270
 #, c-format
 msgid "failed to sync updated files list file for package %s"
-msgstr "kunde inte utföra \"sync\" på uppdaterad fillistfil för paketet %s"
+msgstr "kunde inte synkronisera uppdaterad fillistfil för paketet %s"
 
 #: main/filesdb.c:273
 #, c-format
@@ -1903,11 +1899,11 @@ msgstr "kunde inte öppna statoverride-fil"
 
 #: main/filesdb.c:344
 msgid "failed to fstat statoverride file"
-msgstr "kunde inte utföra \"fstat\" på statoverride-fil"
+msgstr "kunde inte ta status på statoverride-fil"
 
 #: main/filesdb.c:347
 msgid "failed to fstat previous statoverride file"
-msgstr "kunde inte utföra \"fstat\" på tidigare statoverride-fil"
+msgstr "kunde inte ta status på tidigare statoverride-fil"
 
 #: main/filesdb.c:384
 msgid "statoverride file contains empty line"
@@ -1919,11 +1915,11 @@ msgstr "kunde inte öppna omdirigeringsfil"
 
 #: main/filesdb.c:475
 msgid "failed to fstat previous diversions file"
-msgstr "kunde inte utföra \"fstat\" på tidigare omdirigeringsfil"
+msgstr "kunde inte ta status på tidigare omdirigeringsfil"
 
 #: main/filesdb.c:477
 msgid "failed to fstat diversions file"
-msgstr "kunde inte utföra \"fstat\" på omdirigeringsfil"
+msgstr "kunde inte ta status på omdirigeringsfil"
 
 #: main/filesdb.c:497
 msgid "fgets gave an empty string from diversions [i]"
@@ -2016,7 +2012,7 @@ msgstr ""
 #: main/help.c:176
 #, c-format
 msgid "failed to chroot to `%.250s'"
-msgstr "kunde inte utföra \"chroot\" till \"%.250s\""
+msgstr "kunde inte byta filsystemsrot till \"%.250s\""
 
 #: main/help.c:223
 #, c-format
@@ -2265,6 +2261,7 @@ msgstr ""
 "Använd \"dselect\" för användarvänlig pakethantering.\n"
 
 #: main/main.c:118
+#, fuzzy
 msgid ""
 "Type dpkg --help for help about installing and deinstalling packages [*];\n"
 "Use dselect for user-friendly package management;\n"
@@ -2275,7 +2272,7 @@ msgid ""
 "[*].\n"
 "\n"
 "Options marked [*] produce a lot of output - pipe it through `less' or "
-"`more'!"
+"`more' !"
 msgstr ""
 "Skriv dpkg --help för hjälp om att (av)installera paket [*]\n"
 "Använd dselect för användarvänlig pakethantering.\n"
@@ -2615,7 +2612,7 @@ msgstr "kunde inte exekvera dpkg-deb för att få filsystemsarkiv"
 
 #: main/processarc.c:518
 msgid "unable to fdopen dpkg-deb extract pipe"
-msgstr "kunde inte utföra \"fdopen\" på dpkg-debs uppackningsrör"
+msgstr "kunde inte koppla fil till dpkg-debs uppackningsrör"
 
 #: main/processarc.c:524
 msgid "error reading dpkg-deb tar output"
@@ -3088,11 +3085,11 @@ msgstr "kunde inte exekvera gzip -9c"
 
 #: dpkg-deb/build.c:343
 msgid "failed to fstat tmpfile (control)"
-msgstr "kunde inte utföra \"fstat\" mot temporär fil (kontrolldel)"
+msgstr "kunde inte ta status på temporär fil (kontrolldel)"
 
 #: dpkg-deb/build.c:366
 msgid "failed to rewind tmpfile (control)"
-msgstr "kunde inte utföra \"rewind\" mot temporär fil (kontrolldel)"
+msgstr "kunde inte gå till början av temporär fil (kontrolldel)"
 
 #: dpkg-deb/build.c:367
 msgid "control"
@@ -3132,7 +3129,7 @@ msgstr "kunde inte skriva filnamn till tar-rör (datadel)"
 
 #: dpkg-deb/build.c:458
 msgid "failed to rewind tmpfile (data)"
-msgstr "kunde inte utföra \"rewind\" mot temporär fil (datadel)"
+msgstr "kunde inte gå till början av temporär fil (datadel)"
 
 #: dpkg-deb/build.c:461
 msgid "failed to exec cat (data)"
@@ -3169,7 +3166,7 @@ msgstr "kunde inte läsa arkivet \"%.255s\""
 
 #: dpkg-deb/extract.c:110
 msgid "failed to fstat archive"
-msgstr "kunde inte utföra \"fstat\" mot arkivet"
+msgstr "kunde inte ta status på arkivet"
 
 #: dpkg-deb/extract.c:122 split/info.c:94
 #, c-format
@@ -3256,7 +3253,7 @@ msgstr "fsetpos misslyckades"
 
 #: dpkg-deb/extract.c:230
 msgid "failed to fdopen p1 in paste"
-msgstr "kunde inte utföra \"fdopen\" på p1 i \"klistra in\""
+msgstr "kunde inte koppla fil till p1 i \"klistra in\""
 
 #: dpkg-deb/extract.c:232
 msgid "failed to write to gzip -dc"
@@ -3272,7 +3269,7 @@ msgstr "kunde inte utföra systemanropet \"lseek\" för filerna i arkivdelen"
 
 #: dpkg-deb/extract.c:248
 msgid "failed to fdopen p1 in copy"
-msgstr "kunde inte utföra \"fdopen\" på p1 i \"kopiera\""
+msgstr "kunde inte koppla fil till p1 i \"kopiera\""
 
 #: dpkg-deb/extract.c:251
 msgid "failed to write to pipe in copy"
@@ -3296,7 +3293,7 @@ msgstr "kunde inte byta katalog till katalog efter att ha skapat den"
 
 #: dpkg-deb/extract.c:278
 msgid "failed to chdir to directory"
-msgstr "kunde inte utföra chdir till katalogen"
+msgstr "kunde inte byta till katalogen"
 
 #: dpkg-deb/extract.c:291
 msgid "failed to exec tar"
@@ -3561,7 +3558,7 @@ msgstr "filen \"%.250s\" är korrupt - storleken är fel för angivet delnummer"
 #: split/info.c:162
 #, c-format
 msgid "unable to fstat part file `%.250s'"
-msgstr "kunde inte utföra \"fstat\" på delfilen \"%.250s\""
+msgstr "kunde inte ta status på delfilen \"%.250s\""
 
 #: split/info.c:168
 #, c-format
@@ -3855,7 +3852,7 @@ msgstr "kunde inte öppna källfil \"%.250\""
 
 #: split/split.c:63
 msgid "unable to fstat source file"
-msgstr "kunde inte utföra \"fstat\" på källfil"
+msgstr "kunde inte ta status på källfil"
 
 #: split/split.c:64
 #, c-format
@@ -4352,7 +4349,7 @@ msgstr ""
 
 #: dselect/main.cc:260
 msgid "failed to getch in main menu"
-msgstr "kunde inte utföra \"getch\" i huvudmenyn"
+msgstr "kunde inte läsa tecken i huvudmenyn"
 
 #: dselect/main.cc:327
 #, c-format
@@ -5512,6 +5509,9 @@ msgstr ""
 " ^l             rita om skärmen\n"
 "  /             sök (Enter avbryter)\n"
 "  \\             repetera senaste sökning\n"
+
+#~ msgid "showcopyright"
+#~ msgstr "showcopyright"
 
 #~ msgid "failed to exec tar --exclude"
 #~ msgstr "kunde inte exekvera tar --exclude"
