More corrections to the Swedish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-statoverride: new tool to override ownership and modes for files
   * Modify dpkg and dselect to allow versioned provides
   * Check COLUMNS environment for dpkg -l output. Closes: Bug#65536
+  * Corrections and updates to Swedish translation.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
