--- a/po/sv.po
+++ b/po/sv.po
@@ -1561,7 +1561,7 @@ msgid ""
 "dpkg --configure <package> or the configure menu option in dselect:\n"
 msgstr ""
 "Följande paket är bara delvis konfigurerade, troligtvis på grund av problem\n"
-"vid deras första konfiguration. Konfigurationen bör försökas igen med\n"
+"vid deras första konfiguration. Nytt konfigurationsförsök bör göras med\n"
 "dpkg --configure <paket> eller menyvalet \"configure\" i dselect:\n"
 
 #: main/enquiry.c:192
