--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 15 14:55:00 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: More corrections.
+
 Tue Jul  4 17:29:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * main/enquiry.c: modify getttywidth() to check COLUMNS environment
