* archtable: sparc64 and ia64 edits  * dselect/main.cc: gcc 2.96 fixups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jul 31 23:38:56 EDT 2000 Ben Collins <bcollins@debian.org>
+
+  * archtable: add ia64; revert sparc64 so that it turns into sparc. There
+    wont be a full binary-sparc64 port.
+  * dselect/main.cc: small fixups to get it to compile with gcc-2.96
+
 Wed Jul 26 21:27:30 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated translation.
