--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug  1 10:56:52 EDT 2000 Ben Collins <bcollins@debian.org>
+
+  * main/packages.c: fix thinko with versioned deps
+
 Mon Jul 31 23:38:56 EDT 2000 Ben Collins <bcollins@debian.org>
 
   * archtable: add ia64; revert sparc64 so that it turns into sparc. There
