* debian/rules:clean: remove distclean call, we purge the whole build     directory anyway.   * main/main.c: add --assert-versioned-provides option     main/main.h: prototype it     main/enquiry.c: add assertverprov()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Tue Aug  1 10:56:52 EDT 2000 Ben Collins <bcollins@debian.org>
 
   * main/packages.c: fix thinko with versioned deps
+  * debian/rules:clean: remove distclean call, we purge the whole build
+    directory anyway.
+  * main/main.c: add --assert-versioned-provides option
+    main/main.h: prototype it
+    main/enquiry.c: add assertverprov()
 
 Mon Jul 31 23:38:56 EDT 2000 Ben Collins <bcollins@debian.org>
 
