mark another string as translateable

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@ Wed Jul 26 21:27:30 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated translation.
 
+Sun Jul 23 15:23:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/enquiry.c: mark another string as translateable
+
 Sun Jul 16 12:43:59 EDT 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-gencontrol.pl: add Origin, Submit-Bugs-To and
