--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug  7 12:02:16 PDT 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/enquiry.c: cache value of packagelist formatstring instead
+    of recreating it for every package
+
 Tue Aug  1 10:56:52 EDT 2000 Ben Collins <bcollins@debian.org>
 
   * main/packages.c: fix thinko with versioned deps
