check if we are outputing to a tty

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Aug 30 14:24:53 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/enquiry.c: modify listformatstring() to check if output is
+    being sent to a tty. If not and no COLUMNS is set use a width of 80
+
 Mon Aug 21 12:58:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/lock.c, main/filesdb.c, main/archives.c, main/configure.c,
