--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep  2 18:29:56 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * archtable, scripts/dpkg-architecture.pl: add entries for SuperH
+
 Wed Aug 30 14:24:53 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * main/enquiry.c: modify listformatstring() to check if output is
