--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,8 @@ dpkg (1.7.0) unstable; urgency=low
   * Check COLUMNS environment for dpkg -l output. Closes: Bug#65536
   * Add Origin, Bugs-Submit-To, Bugs-Submit-Style
   * Corrections and updates to Swedish translation.
-  * archtable: add ia64; revert sparc64 so that it turns into sparc. There
-    wont be a full binary-sparc64 port.
+  * archtable: add ia64 and sh; revert sparc64 so that it turns into sparc.
+    There wont be a full binary-sparc64 port.
   * dselect/main.cc: small fixups to get it to compile with gcc-2.96
   * Clean  up fd handling in some places. Closes: Bug#69359,#69360,#69361
 
