configure.in: add de to ALL_LINGUAS po/de.po: New German translation from Hartmut Koptein THANKS: Add Hartmut main/enquiry.c: fix silly type error

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Sep  8 12:28:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * configure.in: add de to ALL_LINGUAS
+  * po/de.po: New German translation from Hartmut Koptein
+  * THANKS: Add Hartmut 
+  * main/enquiry.c: fix silly type error
+
 Sat Sep  2 18:29:56 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * archtable, scripts/dpkg-architecture.pl: add entries for SuperH
