scripts/dpkg-divert.pl: change $dpkglibdir to $admindir scripts/Makefile.in: set $admindir as well in scripts

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Fri Sep  8 12:28:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
   * po/de.po: New German translation from Hartmut Koptein
   * THANKS: Add Hartmut 
   * main/enquiry.c: fix silly type error
+  * scripts/dpkg-divert.pl: change $dpkglibdir to $admindir
+  * scripts/Makefile.in: set $admindir as well in scripts
 
 Sat Sep  2 18:29:56 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
