make dpkg-shlibdeps really do what the manpage says it does

--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -58,7 +58,7 @@ will read shared library dependency information from
 the
 .B shlibs
 control area file of the package containing the file which
-.B ldd
+.B objdump
 reports as satisfying the library dependency, or
 .BR /etc/dpkg/shlibs.default .
 The first match will be used.  See the
