--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ dpkg (1.7.0) unstable; urgency=low
 
   * Allow the administrator to override file mode and ownership
   * Use objdump instead of ldd in dpkg-shlibdeps
+  * Fix logic in dpkg-shlibdeps so it looks for dependencies as specified
+    in the documentation
+  * Make update-alternatives update slave links with --config and properly
+    switch the alternative to manual mode
   * HURD updates, Closes: Bug#57753,#57754,#57755
   * dpkg-architecture: -q should not imply -f, Closes: Bug#57761
   * add dpkg:UpstreamVersion and dpkg:Version substvars in dpkg-genchanges
