scripts/dpkg-scanpackages.pl: modify to use most recent version     of a package of multiple versions are found

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Sep 10 23:31:02 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-scanpackages.pl: modify to use most recent version
+    of a package of multiple versions are found
+
 Sat Sep  9 21:17:37 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: add dependency on binutils for dpkg-dev (needed for
