Logged translation changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Sep 14 22:31:15 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+  * doc/sv/deb-control.5, doc/sv/deb-old.5, doc/sv/dpkg.8, doc/sv/md5sum.1,
+    doc/sv/start-stop-daemon.8: Initial Swedish translation.
+  * doc/sv/Makefile.in: Added more Swedish manual pages to install.
+
 Sun Sep 10 23:31:02 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-scanpackages.pl: modify to use most recent version
