--- a/po/sv.po
+++ b/po/sv.po
@@ -1,12 +1,13 @@
 # Swedish translation of dpkg
 # By Peter Karlsson <peterk@debian.org>, 1999-2000.
 # Copyright 1999-2000 Software in the Public Interest
+# $Id$
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.7.0\n"
 "POT-Creation-Date: 2000-09-13 21:37+0200\n"
-"PO-Revision-Date: 2000-09-13 21:44+0200\n"
+"PO-Revision-Date: 2000-09-14 23:20+0200\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -82,7 +83,7 @@ msgstr ""
 #: lib/dbmodify.c:75
 #, c-format
 msgid "cannot scan updates directory `%.255s'"
-msgstr "kunde inte genomsöka uppdateringskatalogen \"%.255s\""
+msgstr "kan inte genomsöka uppdateringskatalogen \"%.255s\""
 
 #: lib/dbmodify.c:91
 #, c-format
@@ -680,7 +681,7 @@ msgstr "tomt värde för %s"
 
 #: lib/showcright.c:31
 msgid "cannot open GPL file "
-msgstr "kunde inte öppna GPL-fil "
+msgstr "kan inte öppna GPL-fil "
 
 #: lib/varbuf.c:77
 msgid "failed to realloc for variable buffer"
@@ -1044,7 +1045,7 @@ msgid ""
 " cannot configure (current status `%.250s')"
 msgstr ""
 "paketet %.250s är inte redo för att konfigureras\n"
-" kan ej konfigurera (aktuell status är \"%.250s\")"
+" kan inte konfigurera (aktuell status är \"%.250s\")"
 
 #: main/configure.c:101
 #, c-format
@@ -2026,7 +2027,7 @@ msgstr "kunde inte stänga av hantering av signalen %s: %s\n"
 #: main/help.c:241
 #, c-format
 msgid "unable to ignore signal %s before running script"
-msgstr "kunde inte ignorera signal %s innan skriptfilen startas"
+msgstr "kunde inte ignorera signal %s innan skriptet startas"
 
 #: main/help.c:250
 #, c-format
@@ -2036,7 +2037,7 @@ msgstr "kunde inte sätta exekveringsbehörighet på \"%.250s\""
 #: main/help.c:274
 #, c-format
 msgid "unable to stat installed %s script `%.250s'"
-msgstr "kunde inte ta status på installerad %s-skriptfil \"%.250s\""
+msgstr "kunde inte ta status på installerat %s-skript \"%.250s\""
 
 #: main/help.c:281 main/help.c:360 main/help.c:400
 #, c-format
@@ -2046,7 +2047,7 @@ msgstr "kunde inte exekvera %s"
 #: main/help.c:311
 #, c-format
 msgid "unable to stat new %s script `%.250s'"
-msgstr "kunde inte ta status på ny %s-skriptfil \"%.250s\""
+msgstr "kunde inte ta status på nytt %s-skript \"%.250s\""
 
 #: main/help.c:318
 #, c-format
@@ -2056,7 +2057,7 @@ msgstr "kunde inte exekvera ny %s"
 #: main/help.c:344
 #, c-format
 msgid "old %s script"
-msgstr "gammal %s-skriptfil"
+msgstr "gammalt %s-skript"
 
 #: main/help.c:352
 #, c-format
@@ -2080,16 +2081,16 @@ msgstr "%s misslyckades med okänd väntestatuskod %d"
 
 #: main/help.c:378
 msgid "dpkg - trying script from the new package instead ...\n"
-msgstr "dpkg - försöker skriptfil från det nya paketet istället ...\n"
+msgstr "dpkg - försöker skript från det nya paketet istället ...\n"
 
 #: main/help.c:385
 #, c-format
 msgid "new %s script"
-msgstr "ny %s-skriptfil"
+msgstr "nytt %s-skript"
 
 #: main/help.c:389
 msgid "there is no script in the new version of the package - giving up"
-msgstr "det finns ingen skriptfil i den nya versionen av paketet - ger upp"
+msgstr "det finns inget skript i den nya versionen av paketet - ger upp"
 
 #: main/help.c:391
 #, c-format
@@ -2321,7 +2322,7 @@ msgstr ""
 "\n"
 "  tal   ref. i källkod    beskrivning\n"
 "    1   general           Allmänt hjälpsam förloppsinformation\n"
-"    2   scripts           Anrop och status för utvecklarskriptfiler\n"
+"    2   scripts           Anrop och status för utvecklarskript\n"
 "   10   eachfile          Utdata för varje fil som hanteras\n"
 "  100   eachfiledetail    Massvis med utdata för varje fil som hanteras\n"
 "   20   conff             Utdata för varje konfigurationsfil\n"
@@ -2515,7 +2516,7 @@ msgstr ", men:\n"
 
 #: main/processarc.c:102
 msgid "cannot access archive"
-msgstr "kunde inte komma åt arkivet"
+msgstr "kan inte komma åt arkivet"
 
 #: main/processarc.c:112
 #, c-format
@@ -2641,7 +2642,7 @@ msgstr "dpkg: varning - kan inte ta bort gammal fil \"%.250s\": %s\n"
 
 #: main/processarc.c:647 main/processarc.c:882 main/remove.c:287
 msgid "cannot read info directory"
-msgstr "kunde inte läsa infokatalog"
+msgstr "kan inte läsa infokatalog"
 
 #: main/processarc.c:660
 #, c-format
@@ -2786,12 +2787,12 @@ msgstr ""
 #: main/remove.c:259
 #, c-format
 msgid "cannot remove `%.250s'"
-msgstr "kunde inte ta bort \"%.250s\""
+msgstr "kan inte ta bort \"%.250s\""
 
 #: main/remove.c:277
 #, c-format
 msgid "cannot remove file `%.250s'"
-msgstr "kunde inte ta bort filen \"%.250s\""
+msgstr "kan inte ta bort filen \"%.250s\""
 
 #: main/remove.c:308
 #, c-format
@@ -2811,27 +2812,27 @@ msgstr "Raderar konfigurationsfiler för %s ...\n"
 #: main/remove.c:382
 #, c-format
 msgid "cannot remove old config file `%.250s' (= `%.250s')"
-msgstr "kunde inte ta bort gammal konfigurationsfil \"%.250s\" (= \"%.250s\")"
+msgstr "kan inte ta bort gammal konfigurationsfil \"%.250s\" (= \"%.250s\")"
 
 #: main/remove.c:397
 #, c-format
 msgid "cannot read config file dir `%.250s' (from `%.250s')"
-msgstr "kunde inte läsa konfigurationsfilskatalog \"%.250s\" (från \"%.250s\")"
+msgstr "kan inte läsa konfigurationsfilskatalog \"%.250s\" (från \"%.250s\")"
 
 #: main/remove.c:432
 #, c-format
 msgid "cannot remove old backup config file `%.250s' (of `%.250s')"
 msgstr ""
-"kunde inte ta bort gammal kopia av konfigurationsfil \"%.250s\" (av "
+"kan inte ta bort gammal kopia av konfigurationsfil \"%.250s\" (av "
 "\"%.250s\")"
 
 #: main/remove.c:461
 msgid "cannot remove old files list"
-msgstr "kunde inte ta bort gammal fillista"
+msgstr "kan inte ta bort gammal fillista"
 
 #: main/remove.c:467
 msgid "can't remove old postrm script"
-msgstr "kunde inte ta bort gammal postrm-skriptfil"
+msgstr "kunde inte ta bort gammalt postrm-skript"
 
 #: main/select.c:95
 msgid "--set-selections does not take any argument"
@@ -2929,7 +2930,7 @@ msgstr "--build behöver ett katalogargument"
 
 #: dpkg-deb/build.c:177
 msgid "--build takes at most two arguments"
-msgstr "--build tar som mest två argument"
+msgstr "--build tar högst två argument"
 
 #: dpkg-deb/build.c:181
 #, c-format
@@ -2986,7 +2987,7 @@ msgstr ""
 #, c-format
 msgid "maintainer script `%.50s' is not a plain file or symlink"
 msgstr ""
-"utvecklarskriptfil \"%.50s\" är inte en vanlig fil eller symbolisk länk"
+"utvecklarskript \"%.50s\" är inte en vanlig fil eller symbolisk länk"
 
 #: dpkg-deb/build.c:260
 #, c-format
@@ -2994,13 +2995,13 @@ msgid ""
 "maintainer script `%.50s' has bad permissions %03lo (must be >=0555 and "
 "<=0775)"
 msgstr ""
-"utvecklarskriptfil \"%.50s\" har felaktig behörighet %03lo (måste vara "
+"utvecklarskript \"%.50s\" har felaktig behörighet %03lo (måste vara "
 ">=0555 och <=0775)"
 
 #: dpkg-deb/build.c:264
 #, c-format
 msgid "maintainer script `%.50s' is not stattable"
-msgstr "kunde inte ta status på utvecklarskriptfil \"%.50s\""
+msgstr "kunde inte ta status på utvecklarskript \"%.50s\""
 
 #: dpkg-deb/build.c:274
 msgid "empty string from fgets reading conffiles"
@@ -3378,17 +3379,17 @@ msgstr "åtminstone en efterfrågad kontrollkomponent saknas"
 #: dpkg-deb/info.c:116
 #, c-format
 msgid "cannot scan directory `%.255s'"
-msgstr "kunde inte läsa katalogen \"%.255s\""
+msgstr "kan inte läsa katalogen \"%.255s\""
 
 #: dpkg-deb/info.c:121
 #, c-format
 msgid "cannot stat `%.255s' (in `%.255s')"
-msgstr "kunde inte ta status på \"%.255s\" (i \"%.255s\")"
+msgstr "kan inte ta status på \"%.255s\" (i \"%.255s\")"
 
 #: dpkg-deb/info.c:124
 #, c-format
 msgid "cannot open `%.255s' (in `%.255s')"
-msgstr "kunde inte öppna \"%.255s\" (i \"%.255s\")"
+msgstr "kan inte öppna \"%.255s\" (i \"%.255s\")"
 
 #: dpkg-deb/info.c:138
 #, c-format
@@ -3575,7 +3576,7 @@ msgstr "filen \"%.250s\" är korrupt - för kort"
 #: split/info.c:180 split/info.c:221
 #, c-format
 msgid "cannot open archive part file `%.250s'"
-msgstr "kunde inte öppna arkivdelen i fil \"%.250s\""
+msgstr "kan inte öppna arkivdelen i fil \"%.250s\""
 
 #: split/info.c:182
 #, c-format
@@ -4485,15 +4486,15 @@ msgstr "kunde inte läsa bekräftelse av meddelande om programs misslyckande"
 
 #: dselect/method.cc:234
 msgid "update available list script"
-msgstr "skriptfil för att uppdatera lista över tillgängliga paket"
+msgstr "skript för att uppdatera lista över tillgängliga paket"
 
 #: dselect/method.cc:238
 msgid "installation script"
-msgstr "installationsskriptfil"
+msgstr "installationsskript"
 
 #: dselect/method.cc:286
 msgid "query/setup script"
-msgstr "fråge-/inställningsskriptfil"
+msgstr "fråge-/inställningsskript"
 
 #: dselect/methparse.cc:51
 #, c-format
@@ -4518,7 +4519,7 @@ msgstr "metoden \"%.250s\" har ett namn som är för långt (%d > %d tecken)"
 #: dselect/methparse.cc:109
 #, c-format
 msgid "unable to access method script `%.250s'"
-msgstr "kunde inte komma åt metodskriptfil \"%.250s\""
+msgstr "kunde inte komma åt metodskript \"%.250s\""
 
 #: dselect/methparse.cc:115
 #, c-format
