--- a/doc/sv/deb.5
+++ b/doc/sv/deb.5
@@ -4,7 +4,7 @@
 .TH DEB 5 "Januari 2000" "Debianprojektet" "Debian GNU/Linux"
 .SH NAME 
 deb \- Debian GNU/Linux binära paketformat
-.SH SYNOPSIS
+.SH SYNOPS
 .IB filenamn .deb
 .SH BESKRIVNING
 .BR .deb -formatet
@@ -36,7 +36,7 @@ och programmet skall avbrytas. Om så inte har gjorts, skall programmet
 kunna fortsätta utan problem, såvida det inte stöter på en oväntad
 post i arkivet (förutom i slutet), enligt vad beskrivs nedan.
 .PP
-Den anda krävda posten heter
+Den andra krävda posten heter
 .B control.tar.gz .
 Det är ett gzip-packat tar-arkiv som innehåller paketets
 kontrollinformation, lagrade som ett antal filer, av vilka filen
