--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -324,7 +324,7 @@ framtida versioner).
 
   tal   beskrivning
     1   Allmänt hjälpsam förloppsinformation
-    2   Anrop och status för utvecklarskriptfiler
+    2   Anrop och status för utvecklarskript
    10   Utdata för varje fil som hanteras
   100   Massvis med utdata för varje fil som hanteras
    20   Utdata för varje konfigurationsfil
