--- a/doc/sv/dselect.8
+++ b/doc/sv/dselect.8
@@ -3,7 +3,7 @@
 .TH DSELECT 8 "Januari 2000" "Debianprojektet" "Debian GNU/Linux"
 .SH NAMN
 dselect \- konsolbaserat pakethanteringssystem för Debian
-.SH SYNOPSIS
+.SH SYNOPS
 .B dselect
 [--admindir <katalog>] [--help] [--version] [--licence | --license]
 [--expert] [--debug <fil> | -D <fil>] [\fI<handling>\fP]
@@ -78,7 +78,7 @@ avslut.
 .TP
 .B --version
 Visar versionsinformation och ger lyckat avslut.
-.SH BUGS
+.SH PROGRAMFEL
 The
 .B dselect
 package selection interface is confusing or even alarming to a new user.
