--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Sep 15 08:00:44 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Some consistency changes for the translation.
+  * doc/sv/deb.5, doc/sv/dpkg.8, doc/sv/dselect.8: Translation fixes.
+
 Thu Sep 14 22:31:15 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
