Add hppa support

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Sep 15 23:45:21 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * THANKS: update email address for dhd
+  * merge hppa fixed from dhd:
+    + archtable: add hppa, fixup SuperH entries
+    + scripts/dpkg-architecture.pl: add hppa
+    + config.sub, config.guess: updated to support hppa
+    + main/enquiry.c: fix printarch()
+
 Fri Sep 15 08:00:44 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Some consistency changes for the translation.
