--- a/THANKS
+++ b/THANKS
@@ -10,7 +10,7 @@ Colin Plumb
 Dan Gohman <gohmandj@mrs.umn.edu>
 Daniel Jacobowitz <dan@debian.org>
 Darren Stalder <torin@daft.com>
-David Huggins-Daines <dhd@eradicator.org>
+David Huggins-Daines <dhd@debian.org>
 Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
 Galen Hazelwood <galenh@debian.org>
 Guy Maor <maor@debian.org>
