Fixes and updates

--- a/po/sv.po
+++ b/po/sv.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.7.0\n"
-"POT-Creation-Date: 2000-09-13 21:37+0200\n"
-"PO-Revision-Date: 2000-09-14 23:20+0200\n"
+"POT-Creation-Date: 2000-09-16 22:57+0200\n"
+"PO-Revision-Date: 2000-09-16 22:59+0200\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -1750,11 +1750,11 @@ msgstr "ingen radbrytning"
 
 #: main/enquiry.c:719
 msgid "no gcc-lib component"
-msgstr "inge gcc-lib-komponent"
+msgstr "ingen gcc-lib-komponent"
 
 #: main/enquiry.c:721
-msgid "no hyphen after gcc-lib"
-msgstr "inget bindestreck efter gcc-lib"
+msgid "no slash after gcc-lib"
+msgstr "inget snedstreck efter gcc-lib"
 
 #: main/enquiry.c:733
 #, c-format
@@ -2823,8 +2823,7 @@ msgstr "kan inte läsa konfigurationsfilskatalog \"%.250s\" (från \"%.250s\")"
 #, c-format
 msgid "cannot remove old backup config file `%.250s' (of `%.250s')"
 msgstr ""
-"kan inte ta bort gammal kopia av konfigurationsfil \"%.250s\" (av "
-"\"%.250s\")"
+"kan inte ta bort gammal kopia av konfigurationsfil \"%.250s\" (av \"%.250s\")"
 
 #: main/remove.c:461
 msgid "cannot remove old files list"
@@ -2986,8 +2985,7 @@ msgstr ""
 #: dpkg-deb/build.c:258
 #, c-format
 msgid "maintainer script `%.50s' is not a plain file or symlink"
-msgstr ""
-"utvecklarskript \"%.50s\" är inte en vanlig fil eller symbolisk länk"
+msgstr "utvecklarskript \"%.50s\" är inte en vanlig fil eller symbolisk länk"
 
 #: dpkg-deb/build.c:260
 #, c-format
@@ -2995,8 +2993,8 @@ msgid ""
 "maintainer script `%.50s' has bad permissions %03lo (must be >=0555 and "
 "<=0775)"
 msgstr ""
-"utvecklarskript \"%.50s\" har felaktig behörighet %03lo (måste vara "
-">=0555 och <=0775)"
+"utvecklarskript \"%.50s\" har felaktig behörighet %03lo (måste vara >=0555 "
+"och <=0775)"
 
 #: dpkg-deb/build.c:264
 #, c-format
@@ -3706,8 +3704,7 @@ msgstr ""
 "\n"
 "Flaggor:  --depotdir <katalog>    (förval är %s/%s)\n"
 "          -S|--partsize <storlek> (i Kbyte, för -s, förval är 450)\n"
-"          -o|--output <fil>       (för -j, förval är "
-"<package>-<version>.deb)\n"
+"          -o|--output <fil>       (för -j, förval är <paket>-<version>.deb)\n"
 "          -Q|--npquiet            (var tyst när -a inte är en del)\n"
 "          --msdos                 (generera 8.3-filnamn)\n"
 "\n"
