Logged today's changes to Swedish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat 16 Sep 22:55:49 CEST 2000 peter karlsson <peterk@debian.org>
+
+ * doc/sv/822-date.1, doc/sv/dpkg-split.8: Initial Swedish translation.
+ * doc/sv/Makefile.in: Added more Swedish manual pages to install.
+ * po/sv.po: Fixes and updates.
+
 Fri Sep 15 23:45:21 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * THANKS: update email address for dhd
