Document -k option for dpkg-buildpackage

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 17 01:50:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-source.1: document -k option for dpkg-buildpackage
+
 Sat 16 Sep 22:55:49 CEST 2000 peter karlsson <peterk@debian.org>
 
  * doc/sv/822-date.1, doc/sv/dpkg-split.8: Initial Swedish translation.
