--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -521,6 +521,9 @@ suppresses these messages.
 .B dpkg-buildpackage
 does not take any non-option arguments.
 .TP
+.BI -k key-id
+Specify a key-ID to use when signing packages.
+.TP
 .BI -r gain-root-command
 When
 .B dpkg-buildpackage
