Add new shlibs.default and shlibs.override files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Sep 21 16:29:32 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/shlibs-default.template: removed
+  * debian/shlibs-{default,override}: new files
+  * debian/rules: install shlibs-{default,override} in /etc/dpkg in dpkg-dev
+
 Sun Sep 17 01:50:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.1: document -k option for dpkg-buildpackage
