--- a/po/dpkg.pot
+++ b/po/dpkg.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-09-08 18:34+0200\n"
+"POT-Creation-Date: 2000-09-21 15:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1624,7 +1624,7 @@ msgid "no gcc-lib component"
 msgstr ""
 
 #: main/enquiry.c:721
-msgid "no hyphen after gcc-lib"
+msgid "no slash after gcc-lib"
 msgstr ""
 
 #: main/enquiry.c:733
