--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ Thu Sep 21 16:29:32 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
   * debian/shlibs-default.template: removed
   * debian/shlibs-{default,override}: new files
   * debian/rules: install shlibs-{default,override} in /etc/dpkg in dpkg-dev
+  * scripts/{dpkg-buildpackage.sh,dpkg-genchanges.pl}: add -S option to only
+    upload sources
+  * scripts/dpkg-source.1: document new -S option
 
 Sun Sep 17 01:50:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
