--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -1,8 +1,8 @@
 .\" Hey Emacs! This file is -*- nroff -*- source.
-.\" Translation of CVS revision 1.9
+.\" Translation of CVS revision 1.10
 .TH DPKG 8 "12 april 1998" "Debianprojektet" "Debian GNU/Linux"
 .SH NAMN
-dpkg - en mellannivåpakethanterare för Debian GNU/Linux
+dpkg \- en mellannivåpakethanterare för Debian GNU/Linux
 
 .SH SYNOPS
 .B dpkg
