--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Sep 25 16:19:05 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-divert.pl: don't print version twice on --help
+
 Thu Sep 21 16:29:32 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/shlibs-default.template: removed
