--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Oct  1 20:09:42 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/enquiry.c: fix the listpackage output logic
+  * main/filesdb.c: fix error cleanup in ensure_statoverride
+  * lib/myopt.c: add myoptfile() so we can read configuration files
+
 Mon Sep 25 16:19:05 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-divert.pl: don't print version twice on --help
