--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ dpkg (1.7.0) unstable; urgency=low
   * Document -k option for dpkg-buildpackage. Closes: Bug#71808
   * Install dummy shlibs.default and shlibs.override files
   * Give dpkg a configurationfile
+  * dpkg-scanpackages now uses the most recent version if muiltiple versions
+    of a package are found.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
