--- a/ChangeLog
+++ b/ChangeLog
@@ -53,7 +53,7 @@ Thu Sep 14 22:31:15 CEST 2000 peter karlsson <peterk@debian.org>
 Sun Sep 10 23:31:02 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-scanpackages.pl: modify to use most recent version
-    of a package of multiple versions are found
+    of a package if multiple versions are found
 
 Sat Sep  9 21:17:37 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
@@ -131,7 +131,7 @@ Sun Jul 16 12:43:59 EDT 2000 Wichert Akkerman <wakkerma@debian.org>
   * scripts/dpkg-gencontrol.pl: add Origin, Submit-Bugs-To and
     Submit-Bugs-Style fields.
   * scripts/dpkg-source.1: slight formatting update
-  * debian/copyright: merge to entries for Miquel van Smoorenburg
+  * debian/copyright: merge two entries for Miquel van Smoorenburg
 
 Sat Jul 15 14:55:00 CEST 2000 peter karlsson <peterk@debian.org>
 
