--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.7.0) unstable; urgency=low
 
-  * Allow the administrator to override file mode and ownership
+  * Allow the administrator to override file mode and ownership using the
+    new dpkg-statoverride tool.
   * Use objdump instead of ldd in dpkg-shlibdeps
   * Fix logic in dpkg-shlibdeps so it looks for dependencies as specified
     in the documentation
