--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue 03 Oct 23:13:59 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+
 Sun Oct  1 20:09:42 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * main/enquiry.c: fix the listpackage output logic
