read trailing zeroes from tar output

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Oct  4 16:37:08 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 
+
+  * main/processarc.c: read trailing zeroes from tar output
+
 Tue 03 Oct 23:13:59 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
