add galician translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct  7 22:18:43 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 
+
+  * po/gl.po, configure.in: add new Galish translation from 
+  * THANKS: add Alberto Garcia
+
 Wed Oct  4 16:37:08 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 
 
   * main/processarc.c: read trailing zeroes from tar output
