--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,5 @@
 Adam Heath <doogie@debian.org>
+Alberto Garcia <berto@gpul.org>
 Andrew Hobson <ahobson@eng.mindspring.net>
 Ben Collins <bcollins@debian.org>
 Branko Lankester
