--- a/debian/changelog
+++ b/debian/changelog
@@ -21,7 +21,7 @@ dpkg (1.7.0) unstable; urgency=low
   * Check COLUMNS environment for dpkg -l output. Closes: Bug#65536
   * Add Origin, Bugs-Submit-To, Bugs-Submit-Style
   * Corrections and updates to Swedish translation.
-  * Add Galician and German translations
+  * Add Galician, German and Brazilian translations
   * archtable: add ia64 and sh; revert sparc64 so that it turns into sparc.
     There wont be a full binary-sparc64 port. Closes: Bug#70788
   * dselect/main.cc: small fixups to get it to compile with gcc-2.96
