--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct 16 10:45:47 EDT 2000 Ben Collins <bcollins@debian.org>
+
+  * main/packages.c: Hack up things so a package which
+    provides/conflicts/replaces it's own virtual can be installed (can't
+    be removed yet, but hey...)
+
 Sat Oct  7 22:18:43 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 
 
   * po/gl.po, configure.in: add new Galish translation from  Alberto Garcia
