--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Thu Oct 19 00:59:40 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
   * utils/start-stop-daemon.c
     + fix a buffer overflow in cmdname handling
     + Only abort if we fail to open an existing pidfile
+  * utils/start-stop-daemon.8: update formating 
 
 Wed Oct 18 17:48:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
