--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ dpkg (1.7.0) unstable; urgency=low
     Closes: Bug#75103
   * Don't abort if start-stop-daemon tries to read a non-existing pidfile.
     Closes: Bug#75105
+  * Update formating of start-stop-daemon manpage. Closes: Bug#75110
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
