Add dutch translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Oct 25 00:14:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/nl.po: new Dutch translation from Ivo Timmermans
+  * THANKS: add Ivo
+  * configure.in: add nl to linguas
+
 Thu Oct 19 00:59:40 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c
