--- a/THANKS
+++ b/THANKS
@@ -21,6 +21,7 @@ Heiko Schlittermann <heiko@lotte.sax.de>
 Hiroshi KISE <fuyuneko@ryukyu.ne.jp>
 Ian Jackson <ian@chiark.chu.cam.ac.uk>
 Ian Murdock <imurdock@debian.org>
+Ivo Timmermans <itimmermans@bigfoot.com>
 J.H.M. Dassen <jdassen@cistron.nl>
 Jim Pick <jim@jimpick.com>
 Jim Van Zandt <jrv@vanzandt.mv.com>
