scripts/dpkg-genchanges.pl: make a missing package a warning instead of an error

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ dpkg (1.7.0) unstable; urgency=low
   * Don't abort if start-stop-daemon tries to read a non-existing pidfile.
     Closes: Bug#75105
   * Update formating of start-stop-daemon manpage. Closes: Bug#75110
+  * Make a missing package a warning instead of an error in dpkg-genchanges
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
