--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 28 15:41:04 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-genchanges.pl: make a missing package a warning instead
+    of an error
+
 Wed Oct 25 00:14:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * po/nl.po: new Dutch translation from Ivo Timmermans
