--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Sat Oct 28 15:41:04 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-genchanges.pl: make a missing package a warning instead
     of an error
+  * dpkg-deb/extract.c: mark readfail message parameters as translateable
 
 Wed Oct 25 00:14:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
