Translated readfail message parameters from extract.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun 29 Oct 01:47:59 CEST 2000 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: translated readfail message parameters from extract.c
+
 Sat Oct 28 15:41:04 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-genchanges.pl: make a missing package a warning instead
