--- a/po/sv.po
+++ b/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.7.0\n"
 "POT-Creation-Date: 2000-10-29 02:26+0200\n"
-"PO-Revision-Date: 2000-10-29 01:47+0200\n"
+"PO-Revision-Date: 2000-10-29 23:35+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -809,7 +809,7 @@ msgstr "försöker skriva över \"%.250s\" som också finns i paketet %.250s"
 #: main/archives.c:399
 #, c-format
 msgid "unable to fdopen for `%.255s'"
-msgstr "kunde inte öppna filen \"%.255s\""
+msgstr "kunde inte ansluta filen \"%.255s\""
 
 #: main/archives.c:408
 #, c-format
@@ -1764,7 +1764,7 @@ msgstr "--print-architecture tar inget argument"
 
 #: main/enquiry.c:686
 msgid "failed to fdopen CC pipe"
-msgstr "kunde inte anluta fill till CC-rör"
+msgstr "kunde inte ansluta fil till CC-rör"
 
 #: main/enquiry.c:705
 msgid "error reading from CC pipe"
@@ -2651,7 +2651,7 @@ msgstr "kunde inte exekvera dpkg-deb för att få filsystemsarkiv"
 
 #: main/processarc.c:518
 msgid "unable to fdopen dpkg-deb extract pipe"
-msgstr "kunde inte koppla fil till dpkg-debs uppackningsrör"
+msgstr "kunde inte ansluta fil till dpkg-debs uppackningsrör"
 
 #: main/processarc.c:524
 msgid "error reading dpkg-deb tar output"
@@ -3313,7 +3313,7 @@ msgstr "fsetpos misslyckades"
 
 #: dpkg-deb/extract.c:230
 msgid "failed to fdopen p1 in paste"
-msgstr "kunde inte koppla fil till p1 i \"klistra in\""
+msgstr "kunde inte ansluta fil till p1 i \"klistra in\""
 
 #: dpkg-deb/extract.c:232
 msgid "failed to write to gzip -dc"
@@ -3329,7 +3329,7 @@ msgstr "kunde inte utföra systemanropet \"lseek\" för filarkivdelen"
 
 #: dpkg-deb/extract.c:248
 msgid "failed to fdopen p1 in copy"
-msgstr "kunde inte koppla fil till p1 i \"kopiera\""
+msgstr "kunde inte ansluta fil till p1 i \"kopiera\""
 
 #: dpkg-deb/extract.c:250
 msgid "member data"
