Created branch point for versioned provides, reverted changes from HEAD for it too

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,6 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-genchanges: allow a space between # and a to-be-closed bugnumber
   * dpkg-deb: reorder files when building a package
   * dpkg-statoverride: new tool to override ownership and modes for files
-  * Modify dpkg and dselect to allow versioned provides
   * Check COLUMNS environment for dpkg -l output. Closes: Bug#65536
   * Add Origin, Bugs-Submit-To, Bugs-Submit-Style
   * Corrections and updates to Swedish translation.
@@ -39,7 +38,7 @@ dpkg (1.7.0) unstable; urgency=low
   * Update formating of start-stop-daemon manpage. Closes: Bug#75110
   * Make a missing package a warning instead of an error in dpkg-genchanges
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Mon,  8 May 2000 16:08:53 +0200
 
 dpkg (1.6.13) frozen unstable; urgency=low
 
