--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>
+
+  * Create branch point for versioned provides
+  * Revert patches for it from the HEAD
+
 Sun 29 Oct 23:33:48 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: some corrections
