--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Nov  5 16:28:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/dpkg.conffiles: added missing file
+  * debian/rules, main/main.c: rename dpkg configfile to dpkg.cfg
+
 Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>
 
   * Create branch point for versioned provides
